@@ -1,3 +1,5 @@
+  - Add $MAX_SUIT_COUPON_PRICE
+
 v0.1.3    Wed, 15 Nov 2017 14:49:24 +0900
   - Add SHIPPING_DEADLINE_HOUR constants
 
